--- a/style.css
+++ b/style.css
@@ -230,105 +230,57 @@ button:last-child {
     margin-top: 30px;
 }
 
-
-@media(max-width: 1220px) {
-    .pagetwo .computer-screen picture {
-        width: 80%;
-        position: unset;
-        margin-left: auto;
-        margin-right: auto;
-        margin-bottom: 120px;
-    }
-    .pagetwo .computer-screen .monitor-info {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: space-around;
-        height: 450px;
-        margin: auto 0;
-        width: 100%;
-    }
-    .computer-screen .monitor-info .computer-description {
-        flex-direction: column;
-        justify-content: space-around;
-        width: 100%;
-        height: 25%;
-        text-align: center;
-    }
-    .computer-screen .monitor-info .computer-description h3 {
-        margin-bottom: 15px;
-    }
-    .computer-screen .monitor-info p {
-        width: auto;
-    }
+footer
+{
+    padding-bottom: 10%;
+    background-color: hsl(201, 11%, 66%);
+    background-color: rgba(0, 0, 0, .03);
 }
 
-@media(max-width: 935px) {
-    .pagetwo .computer-screen {
-        align-items: center;
-        justify-content: space-between;
-        text-align: center;
-    }
+.footerlists
+{
+    display: flex;
+    flex-direction: row;
+    margin-left: 30%;
+    margin-top: -10%;
+}
+.footer .contacts
+{
+    margin-right: 20%;
+    display: flex;
+    flex-direction: row;
 }
 
-@media(max-width: 700px) {
-    body {
-        background-image: url('/images/bg-header-mobile.png');
-    }
-    p {
-        font-size: 16px !important;
-    }
-    header {
-        width: auto;
-        height: 550px;
-        padding: 30px;
-    }
-    .pageone-content {
-        height: 250px;
-    }
-    header picture {
-        margin-bottom: 60px;
-    }
-    header h1 {
-        font-size: 30px;
-    }
-    .pagetwo .computer-screen picture {
-        width: 100%;
-        margin-bottom: 50px;
-    }
-    .pagetwo h2, p {
-        width: auto;
-        margin: auto;
-    }
-    .pagethree .pagethreecontentone{
-        margin-top: 80px;
-    }
-    .pagethree picture img {
-        width: 100%;
-        margin-bottom: 80px;
-    }
-    .pagethree .pagethreecontenttwo {
-        height: 150px;
-    }
-    .pagefour .pagefourcontent div h3 {
-        font-size: 25px;
-    }
-    .pagefour .pagefourcontent div img {
-        margin-bottom: 50px;
-    }
-    header form button {
-        width: 100%;
-        margin: 10px 0;
-    }
-    .pagefive .companies {
-        gap: 70px;
-    }
-    .pagefive .companies img {
-        width: 130px;
-    }
-    .pagefive form button {
-        width: 100%;
-        margin: 10px 0;
-    }
-    
+footer ul {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: flex-start;
+    color: var(--Dark-Grayish-Blue);
+    font-weight: 600;
+}
+footer ul li {
+    list-style-type: none;
+    margin-right: 5%;
+    margin-bottom: 10%;
+}
+footer ul li a {
+    color: inherit;
+    text-decoration: none;
+    padding-right: 3%;
+}
+img.footerlogo
+{
+    width: 10%;
+    margin-top: 5%;
+    margin-left: 5%;
+}
+.footer .icons
+{
+    display: flex;
+    flex-direction: row;
+}    
+.icons li
+{
+    margin-right: 50%;
 }
